--- a/.github/workflows/app-workflow.yaml
+++ b/.github/workflows/app-workflow.yaml
@@ -66,3 +66,23 @@ jobs:
           file: Dockerfile-app
           push: true
           tags: chadirahme/feed-data:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - docker-build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Add Server key
+        run: |
+          touch key.txt && echo "${{ secrets.SERVER_KEY }}" > key.txt
+          chmod 600 key.txt
+      - name: Deploy the application
+        env:
+          SERVER_HOST: ${{ secrets.SERVER_HOST }}
+          SERVER_PORT: ${{ secrets.SERVER_PORT }}
+          SERVER_USER: ${{ secrets.SERVER_USER }}
+        run: |
+          set -e
+          chmod +x ./deploy.sh
+          ./deploy.sh
